[tool.poetry]
name = "combinators-gnn"
version = "0.1.0"
description = ""
authors = ["Carlos Fernandez <carlos.ferlo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

torch = {version = "^2.9.0"}
implica = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
